// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterButton passes drawerProps onto the underlying Filter 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) title="Filter By" model={{...}} drawerProps={{...}}>
        <inject-FilterButton-with-app title="Filter By" model={{...}} drawerProps={{...}} classes={{...}}>
          <FilterButton title="Filter By" model={{...}} drawerProps={{...}} classes={{...}} app={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter By" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter By" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-448 MuiButton-contained-459 MuiButton-raised-462 RSFActionButton-raised-444" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-467" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-448 MuiButton-contained-459 MuiButton-raised-462 RSFActionButton-raised-444" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-467" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-474 MuiButton-root-448 MuiButton-contained-459 MuiButton-raised-462 RSFActionButton-raised-444" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-449 RSFActionButton-label-445">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-446">
                              <Typography variant="button" className="RSFActionButton-caption-446" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-477 MuiTypography-button-488 RSFActionButton-caption-446">
                                  Filter By
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-447">
                              <Typography variant="caption" className="RSFActionButton-value-447" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-477 MuiTypography-caption-487 RSFActionButton-value-447" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-532" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-532" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}}>
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant={[undefined]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-518 MuiDrawer-modal-529" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-518 MuiDrawer-modal-529" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-530 MuiDrawer-root-518 MuiDrawer-modal-529 MuiModal-hidden-531" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-539" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-520 RSFDrawer-paper-515 RSFFilterButton-drawer-443 MuiDrawer-paperAnchorBottom-524" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-520 RSFDrawer-paper-515 RSFFilterButton-drawer-443 MuiDrawer-paperAnchorBottom-524" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-541 MuiPaper-elevation16-559 MuiDrawer-paper-520 RSFDrawer-paper-515 RSFFilterButton-drawer-443 MuiDrawer-paperAnchorBottom-524" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-513">
                                                  <WithStyles(Typography) className="RSFDrawer-title-516" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-516" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-477 MuiTypography-h6-494 RSFDrawer-title-516">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-568" style={{...}}>
                                                                <div>
                                                                  Filter By
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-512" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-512" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-570 MuiFab-primary-572 RSFDrawer-closeButton-512" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-575" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-570 MuiFab-primary-572 RSFDrawer-closeButton-512" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-575" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-474 MuiFab-root-570 MuiFab-primary-572 RSFDrawer-closeButton-512" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-571">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-580" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-532" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-532" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-514" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton renders with filters selected 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) model={{...}}>
        <inject-FilterButton-with-app model={{...}} classes={{...}}>
          <FilterButton model={{...}} classes={{...}} app={{...}} title="Filter" drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter" href={{...}} value="2 selected" classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter" href={{...}} value="2 selected" onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-154 MuiButton-contained-165 MuiButton-raised-168 RSFActionButton-raised-150" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-173" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-154 MuiButton-contained-165 MuiButton-raised-168 RSFActionButton-raised-150" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-173" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-180 MuiButton-root-154 MuiButton-contained-165 MuiButton-raised-168 RSFActionButton-raised-150" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-155 RSFActionButton-label-151">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-152">
                              <Typography variant="button" className="RSFActionButton-caption-152" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-183 MuiTypography-button-194 RSFActionButton-caption-152">
                                  Filter
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-153">
                              <Typography variant="caption" className="RSFActionButton-value-153" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-183 MuiTypography-caption-193 RSFActionButton-value-153">
                                  2 selected
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-238" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-238" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}}>
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant={[undefined]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-224 MuiDrawer-modal-235" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-224 MuiDrawer-modal-235" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-236 MuiDrawer-root-224 MuiDrawer-modal-235 MuiModal-hidden-237" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-245" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-226 RSFDrawer-paper-221 RSFFilterButton-drawer-149 MuiDrawer-paperAnchorBottom-230" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-226 RSFDrawer-paper-221 RSFFilterButton-drawer-149 MuiDrawer-paperAnchorBottom-230" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-247 MuiPaper-elevation16-265 MuiDrawer-paper-226 RSFDrawer-paper-221 RSFFilterButton-drawer-149 MuiDrawer-paperAnchorBottom-230" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-219">
                                                  <WithStyles(Typography) className="RSFDrawer-title-222" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-222" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-183 MuiTypography-h6-200 RSFDrawer-title-222">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-274" style={{...}}>
                                                                <div>
                                                                  Filter
                                                                </div>
                                                                <a className="RSFFilterButton-clear-148" onClick={[Function: res]}>
                                                                  clear all
                                                                </a>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-218" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-218" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-276 MuiFab-primary-278 RSFDrawer-closeButton-218" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-281" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-276 MuiFab-primary-278 RSFDrawer-closeButton-218" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-281" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-180 MuiFab-root-276 MuiFab-primary-278 RSFDrawer-closeButton-218" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-277">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-286" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-238" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-238" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-220" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton renders with no filters selected 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) model={{...}}>
        <inject-FilterButton-with-app model={{...}} classes={{...}}>
          <FilterButton model={{...}} classes={{...}} app={{...}} title="Filter" drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-7 MuiButton-contained-18 MuiButton-raised-21 RSFActionButton-raised-3" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-26" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-7 MuiButton-contained-18 MuiButton-raised-21 RSFActionButton-raised-3" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-26" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-33 MuiButton-root-7 MuiButton-contained-18 MuiButton-raised-21 RSFActionButton-raised-3" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-8 RSFActionButton-label-4">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-5">
                              <Typography variant="button" className="RSFActionButton-caption-5" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-36 MuiTypography-button-47 RSFActionButton-caption-5">
                                  Filter
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-6">
                              <Typography variant="caption" className="RSFActionButton-value-6" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-36 MuiTypography-caption-46 RSFActionButton-value-6" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-91" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-91" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}}>
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant={[undefined]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-77 MuiDrawer-modal-88" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-77 MuiDrawer-modal-88" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-89 MuiDrawer-root-77 MuiDrawer-modal-88 MuiModal-hidden-90" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-98" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-79 RSFDrawer-paper-74 RSFFilterButton-drawer-2 MuiDrawer-paperAnchorBottom-83" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-79 RSFDrawer-paper-74 RSFFilterButton-drawer-2 MuiDrawer-paperAnchorBottom-83" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-100 MuiPaper-elevation16-118 MuiDrawer-paper-79 RSFDrawer-paper-74 RSFFilterButton-drawer-2 MuiDrawer-paperAnchorBottom-83" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-72">
                                                  <WithStyles(Typography) className="RSFDrawer-title-75" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-75" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-36 MuiTypography-h6-53 RSFDrawer-title-75">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-127" style={{...}}>
                                                                <div>
                                                                  Filter
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-71" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-71" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-129 MuiFab-primary-131 RSFDrawer-closeButton-71" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-134" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-129 MuiFab-primary-131 RSFDrawer-closeButton-71" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-134" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-33 MuiFab-root-129 MuiFab-primary-131 RSFDrawer-closeButton-71" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-130">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-139" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-91" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-91" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-73" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;

exports[`FilterButton uses the title prop as the label and drawer header 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <MuiThemeProviderOld theme={{...}}>
      <WithStyles(inject-FilterButton-with-app) title="Filter By" model={{...}}>
        <inject-FilterButton-with-app title="Filter By" model={{...}} classes={{...}}>
          <FilterButton title="Filter By" model={{...}} classes={{...}} app={{...}} drawerProps={{...}} hideClearLink={false} clearLinkText="clear all">
            <WithStyles(ActionButton) label="Filter By" href={{...}} value={{...}} classes={{...}} onClick={[Function]}>
              <ActionButton label="Filter By" href={{...}} value={{...}} onClick={[Function]} classes={{...}}>
                <WithStyles(Button) variant="contained" classes={{...}} href={{...}} onClick={[Function]}>
                  <Button variant="contained" href={{...}} onClick={[Function]} classes={{...}} color="default" component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
                    <WithStyles(ButtonBase) className="MuiButton-root-301 MuiButton-contained-312 MuiButton-raised-315 RSFActionButton-raised-297" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-320" href={{...}} onClick={[Function]} component="button" type="button">
                      <ButtonBase className="MuiButton-root-301 MuiButton-contained-312 MuiButton-raised-315 RSFActionButton-raised-297" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-320" href={{...}} onClick={[Function]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                        <button className="MuiButtonBase-root-327 MuiButton-root-301 MuiButton-contained-312 MuiButton-raised-315 RSFActionButton-raised-297" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function]}>
                          <span className="MuiButton-label-302 RSFActionButton-label-298">
                            <WithStyles(Typography) variant="button" className="RSFActionButton-caption-299">
                              <Typography variant="button" className="RSFActionButton-caption-299" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-330 MuiTypography-button-341 RSFActionButton-caption-299">
                                  Filter By
                                </span>
                              </Typography>
                            </WithStyles(Typography)>
                            <WithStyles(Typography) variant="caption" className="RSFActionButton-value-300">
                              <Typography variant="caption" className="RSFActionButton-value-300" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                <span className="MuiTypography-root-330 MuiTypography-caption-340 RSFActionButton-value-300" />
                              </Typography>
                            </WithStyles(Typography)>
                          </span>
                          <NoSsr defer={false} fallback={{...}}>
                            <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                              <TouchRipple center={false} classes={{...}}>
                                <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-385" childFactory={[Function: childFactory]}>
                                  <span className="MuiTouchRipple-root-385" />
                                </TransitionGroup>
                              </TouchRipple>
                            </WithStyles(TouchRipple)>
                          </NoSsr>
                        </button>
                      </ButtonBase>
                    </WithStyles(ButtonBase)>
                  </Button>
                </WithStyles(Button)>
              </ActionButton>
            </WithStyles(ActionButton)>
            <WithStyles(inject-Drawer) ModalProps={{...}} classes={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]}>
              <inject-Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}}>
                <Drawer ModalProps={{...}} anchor="bottom" title={{...}} open={false} onRequestClose={[Function: bound ]} classes={{...}} amp={false} ampStateId={[undefined]} showCloseButton={true} autoAdjustBodyPadding={false} closeButtonProps={{...}}>
                  <WithStyles(Drawer) anchor="bottom" classes={{...}} amp-bind={{...}} open={false} variant={[undefined]} ModalProps={{...}}>
                    <Drawer anchor="bottom" amp-bind={{...}} open={false} variant="temporary" ModalProps={{...}} theme={{...}} classes={{...}} elevation={16} transitionDuration={{...}}>
                      <WithStyles(Modal) BackdropProps={{...}} className="MuiDrawer-root-371 MuiDrawer-modal-382" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true}>
                        <Modal BackdropProps={{...}} className="MuiDrawer-root-371 MuiDrawer-modal-382" open={false} onClose={[undefined]} amp-bind={{...}} keepMounted={true} classes={{...}} BackdropComponent={[Function: WithStyles]} disableAutoFocus={false} disableBackdropClick={false} disableEnforceFocus={false} disableEscapeKeyDown={false} disablePortal={false} disableRestoreFocus={false} hideBackdrop={false} manager={{...}}>
                          <Portal container={[undefined]} disablePortal={false} onRendered={[Function]}>
                            <Portal containerInfo={{...}}>
                              <div className="mui-fixed MuiModal-root-383 MuiDrawer-root-371 MuiDrawer-modal-382 MuiModal-hidden-384" amp-bind={{...}}>
                                <WithStyles(Backdrop) open={false} onClick={[Function]} transitionDuration={{...}}>
                                  <Backdrop open={false} onClick={[Function]} transitionDuration={{...}} classes={{...}} invisible={false}>
                                    <WithTheme(Fade) in={false} timeout={{...}} onClick={[Function]}>
                                      <Fade theme={{...}} in={false} timeout={{...}} onClick={[Function]}>
                                        <Transition appear={true} onEnter={[Function]} onExit={[Function]} in={false} timeout={{...}} onClick={[Function]} mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntering={[Function: noop]} onEntered={[Function: noop]} onExiting={[Function: noop]} onExited={[Function: noop]}>
                                          <div className="MuiBackdrop-root-392" aria-hidden="true" style={{...}} onClick={[Function]} />
                                        </Transition>
                                      </Fade>
                                    </WithTheme(Fade)>
                                  </Backdrop>
                                </WithStyles(Backdrop)>
                                <RootRef rootRef={[Function]}>
                                  <WithTheme(Slide) in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                    <Slide theme={{...}} in={false} direction="up" timeout={{...}} appear={false} onExited={[Function: chainedFunction]} role="document" tabIndex="-1">
                                      <EventListener target="window" onResize={[Function: debounced]}>
                                        <Transition onEnter={[Function]} onEntering={[Function]} onExit={[Function]} onExited={[Function]} appear={false} style={{...}} in={false} direction="up" timeout={{...}} role="document" tabIndex="-1" mountOnEnter={false} unmountOnExit={false} enter={true} exit={true} onEntered={[Function: noop]} onExiting={[Function: noop]}>
                                          <WithStyles(Paper) elevation={16} square={true} className="MuiDrawer-paper-373 RSFDrawer-paper-368 RSFFilterButton-drawer-296 MuiDrawer-paperAnchorBottom-377" style={{...}} direction="up" role="document" tabIndex="-1">
                                            <Paper elevation={16} square={true} className="MuiDrawer-paper-373 RSFDrawer-paper-368 RSFFilterButton-drawer-296 MuiDrawer-paperAnchorBottom-377" style={{...}} direction="up" role="document" tabIndex="-1" classes={{...}} component="div">
                                              <div className="MuiPaper-root-394 MuiPaper-elevation16-412 MuiDrawer-paper-373 RSFDrawer-paper-368 RSFFilterButton-drawer-296 MuiDrawer-paperAnchorBottom-377" style={{...}} direction="up" role="document" tabIndex="-1">
                                                <div className="RSFDrawer-container-366">
                                                  <WithStyles(Typography) className="RSFDrawer-title-369" variant="h6" component="div">
                                                    <Typography className="RSFDrawer-title-369" variant="h6" component="div" theme={{...}} classes={{...}} align="inherit" color="default" gutterBottom={false} headlineMapping={{...}} noWrap={false} paragraph={false}>
                                                      <div className="MuiTypography-root-330 MuiTypography-h6-347 RSFDrawer-title-369">
                                                        <Hbox justifyContent="center">
                                                          <WithStyles(Box) alignItems="center" justifyContent="center" flexDirection="row">
                                                            <Box alignItems="center" justifyContent="center" flexDirection="row" classes={{...}}>
                                                              <div className="RSFBox-root-421" style={{...}}>
                                                                <div>
                                                                  Filter By
                                                                </div>
                                                              </div>
                                                            </Box>
                                                          </WithStyles(Box)>
                                                        </Hbox>
                                                      </div>
                                                    </Typography>
                                                  </WithStyles(Typography)>
                                                  <WithStyles(Fab) color="primary" className="RSFDrawer-closeButton-365" onClick={[Function]} style={{...}} on={{...}}>
                                                    <Fab color="primary" className="RSFDrawer-closeButton-365" onClick={[Function]} style={{...}} on={{...}} classes={{...}} component="button" disabled={false} disableFocusRipple={false} size="large" type="button" variant="round">
                                                      <WithStyles(ButtonBase) className="MuiFab-root-423 MuiFab-primary-425 RSFDrawer-closeButton-365" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-428" onClick={[Function]} style={{...}} on={{...}} component="button" type="button">
                                                        <ButtonBase className="MuiFab-root-423 MuiFab-primary-425 RSFDrawer-closeButton-365" disabled={false} focusRipple={true} focusVisibleClassName="MuiFab-focusVisible-428" onClick={[Function]} style={{...}} on={{...}} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                                                          <button className="MuiButtonBase-root-327 MuiFab-root-423 MuiFab-primary-425 RSFDrawer-closeButton-365" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} onClick={[Function]} style={{...}} on={{...}}>
                                                            <span className="MuiFab-label-424">
                                                              <pure(CloseIcon)>
                                                                <CloseIcon>
                                                                  <WithStyles(SvgIcon)>
                                                                    <SvgIcon classes={{...}} color="inherit" component="svg" fontSize="default" viewBox="0 0 24 24">
                                                                      <svg className="MuiSvgIcon-root-433" focusable="false" viewBox="0 0 24 24" color={[undefined]} aria-hidden="true" role="presentation">
                                                                        <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z" />
                                                                        <path fill="none" d="M0 0h24v24H0z" />
                                                                      </svg>
                                                                    </SvgIcon>
                                                                  </WithStyles(SvgIcon)>
                                                                </CloseIcon>
                                                              </pure(CloseIcon)>
                                                            </span>
                                                            <NoSsr defer={false} fallback={{...}}>
                                                              <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                                                                <TouchRipple center={false} classes={{...}}>
                                                                  <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-385" childFactory={[Function: childFactory]}>
                                                                    <span className="MuiTouchRipple-root-385" />
                                                                  </TransitionGroup>
                                                                </TouchRipple>
                                                              </WithStyles(TouchRipple)>
                                                            </NoSsr>
                                                          </button>
                                                        </ButtonBase>
                                                      </WithStyles(ButtonBase)>
                                                    </Fab>
                                                  </WithStyles(Fab)>
                                                  <div className="RSFDrawer-content-367" />
                                                </div>
                                              </div>
                                            </Paper>
                                          </WithStyles(Paper)>
                                        </Transition>
                                      </EventListener>
                                    </Slide>
                                  </WithTheme(Slide)>
                                </RootRef>
                              </div>
                            </Portal>
                          </Portal>
                        </Modal>
                      </WithStyles(Modal)>
                    </Drawer>
                  </WithStyles(Drawer)>
                </Drawer>
              </inject-Drawer>
            </WithStyles(inject-Drawer)>
          </FilterButton>
        </inject-FilterButton-with-app>
      </WithStyles(inject-FilterButton-with-app)>
    </MuiThemeProviderOld>
  </Provider>
</TestProvider>
`;
